--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "frontend-code-test",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=12.22.0"
+  },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.4",
-    "@types/react": "^17.0.22",
+    "@types/react": "^18.0.8",
     "@types/react-dom": "^17.0.9",
-    "next": "^11.1.2",
+    "next": "^12.1.5",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "typescript": "~4.4.3"
+    "react-spring": "^9.4.4",
+    "react-spring-carousel": "^2.0.13",
+    "typescript": "~4.4.3",
+    "vcc-ui": "^2.26.1"
   },
   "scripts": {
     "dev": "next dev",
@@ -34,7 +41,13 @@
     ]
   },
   "devDependencies": {
+    "@styled-jsx/plugin-sass": "^4.0.2",
+    "css-loader": "^6.7.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "node-sass": "^7.0.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1"
   }
 }
